--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulario</title>
 </head>
 <body>
-    <p>Hola</p>
+    <section>
+        <form action="../backend/formulario.php" method="post">
+            <label for="nombre">Nombre: </label>
+            <input type="text" name="nombre">
+            <br>
+
+            <label for="correo">Correo: </label>
+            <input type="text" name="correo">
+
+            <label for="ciclo">Ciclo: </label>
+            <select name="ciclo">
+                <option value="DAW">DAW</option>
+                <option value="DAM">DAM</option>
+                <option value="ASIX">ASIX</option>
+            </select>
+            <br>
+
+            <label for="telefono">Telefono: </label>
+            <input type="tel" name="telefono">
+            <br>
+            
+            <label for="consentimiento">Consentimiento de datos</label>
+            <input type="checkbox" name="consentimiento" value="Acepto">
+
+            <input type="submit" value="Enviar">
+        </form>
+    </section>
 </body>
 </html>
