Marca de agua fotos

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav id="nav-section">
-         <img src="./img/LogoPagina.png" alt="imagen-logo" class="logoPagina">
+         <img src="./img/logo.png" alt="imagen-logo" class="logoPagina">
         <ul id="main-nav">
             <li><a href="">Hombre</a></li>
             <li><a href="">Mujer</a></li>
@@ -38,7 +38,7 @@
 
                 <article class="brand1">
                     <a href="#">
-                        <img src="./img/logoNike.png" alt="imagen-logo" class="fotoMasNovedades">
+                        <img src="./img/logoNike.jpg" alt="imagen-logo" class="fotoMasNovedades">
                         <img src="./img/simboloNike.png" alt="logo" class="fotoSimbolo">
                     </a>
                 </article>
