Añadir marca de agua, reducir tamaños y añadir videos -> HOME

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -65,6 +65,12 @@
                 </article>
                 
             </div>
+
+            <div id="videos-carusel">
+                <div>
+                    <a href="#"><video src="vid/Video nike.mp4" autoplay loop muted width="100%"></video></a>
+                </div>
+            </div>
         </section>
 
     <section id="mas-comprados">
@@ -78,8 +84,8 @@
                             <img src="./img/zapatillasNikeKM.png" alt="imagen-logo" class="fotoMasComprados">
                         </a>
                         <div class="prod-desc">
-                            <strong>Nike mercurial</strong>
-                            <p>100,00 €</p>
+                            <strong>Nike Mercurial Superfly 10 Academy</strong>
+                            <p>69,99 € <span>99,99 €</span></p>
                         </div>
                     </div>
                         <a href="#" class="button">Añadir al carrito</a>
@@ -104,8 +110,8 @@
                                 <img src="./img/nikeropa-removebg-preview.png" alt="imagen-logo" class="fotoMasComprados">
                             </a>
                             <div class="prod-desc">
-                                <strong>Nike mercurial</strong>
-                                <p>100,00 €</p>
+                                <strong>Nike Impossibly Light</strong>
+                                <p>76,99 € <span>109,99 €</span></p>
                             </div>
                         </div>
                         <a href="#" class="button">Añadir al carrito</a>
@@ -114,11 +120,11 @@
                     <article class="product4">
                         <div>
                             <a href="#">
-                                <img src="./img/nikeropa-removebg-preview.png" alt="imagen-logo" class="fotoMasComprados">
+                                <img src="./img/adidasZapatillas-removebg-preview.png" alt="imagen-logo" class="fotoMasComprados">
                             </a>
                             <div class="prod-desc">
-                                <strong>Nike mercurial</strong>
-                                <p>100,00 €</p>
+                                <strong>Zapatilla Terrex Agravic</strong>
+                                <p>99,99€</p>
                             </div>
                         </div>
                         <a href="#" class="button">Añadir al carrito</a>
