--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-        <form action="../backend/formulario.php" method="post">
+        <form action="../backend/registro/formulario.php" method="post">
             <label for="nombre">Nombre: </label>
             <input type="text" name="nombre">
             <br>
