--- a/frontend/añadirProducto.html
+++ b/frontend/añadirProducto.html
@@ -9,7 +9,7 @@
 
 <body>
     <section id="form-section">
-        <form>
+        <form action="post">
 
             <label for="categoria">
                 Categoria:
