--- a/frontend/home.html
+++ b/frontend/home.html
@@ -4,172 +4,201 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Home</title>
 </head>
 
 <body>
-    <nav id="nav-section">
-        <img src="./img/logo.png" alt="imagen-logo" class="logoPagina">
-        <ul id="main-nav">
-            <li><a href="">Hombre</a></li>
-            <li><a href="">Mujer</a></li>
-            <li><a href="">Niños</a></li>
-        </ul>
+    <nav id="nav-section" class="fixed-top" style="background-color: #1F1F1F;">
+        <div class="container-fluid h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-lg-1 col-md-2 col-2 text-center">
+                    <img src="./img/logo.png" alt="imagen-logo" class="logoPagina img-fluid">
+                </div>
 
-        <input type="text" placeholder="Buscar">
+                <div class="col-lg-4 col-md-8 d-none d-lg-block">
+                    <ul id="main-nav" class="d-flex justify-content-around list-unstyled m-0">
+                        <li><a href="">Hombre</a></li>
+                        <li><a href="">Mujer</a></li>
+                        <li><a href="">Niños</a></li>
+                    </ul>
+                </div>
 
-        <ul id="icon-nav">
-            <li><a href="../backend/auth/login.php"><img src="img/user.png" alt=""></a></li>
-            <li><a href="#"><img src="img/carrito.png" alt=""></a></li>
-        </ul>
+                <div class="col-lg-5 col-md-6 col-6 d-block">
+                    <input type="text" placeholder="Buscar" class="w-100">
+                </div>
+
+                <div class="col-lg-2 col-md-4 col-4 d-flex justify-content-end">
+                    <ul id="icon-nav" class="d-flex list-unstyled m-0 gap-3">
+                        <li><a href="../backend/auth/login.php"><img src="img/user.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/carrito.png" alt=""></a></li>
+                    </ul>
+                    <!-- Mobile Menu Button Placeholder if strictly needed, but respecting "leave it as before" implies desktop-first emphasis with responsive tweaks -->
+                </div>
+            </div>
+        </div>
     </nav>
     <main>
-        <header>
-            <div>
+        <header class="d-flex align-items-center justify-content-center text-center">
+            <div class="container">
                 <h1>J&A Sports</h1>
                 <p>Compra a montones y viste a tu propio estilo</p>
             </div>
         </header>
 
-        <section id="novedades">
-            <h2>Novedades</h2>
-            <div id="brands">
-                <article class="brand1">
+        <section id="novedades" class="container mt-5">
+            <h2 class="text-center mb-5">Novedades</h2>
+            <div id="brands" class="row g-4">
+                <article class="col-6 col-md-6 col-lg-3 brand1 text-center">
                     <a href="#">
                         <img src="./img/logoNike.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/simboloNike.png" alt="logo" class="fotoSimbolo">
+                        <img src="./img/simboloNike.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
                     </a>
                 </article>
 
-                <article class="brand2">
+                <article class="col-6 col-md-6 col-lg-3 brand2 text-center">
                     <a href="#">
                         <img src="./img/logoAdidass.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/AdidasSimbolo.png" alt="logo" class="fotoSimboloAdidas">
+                        <img src="./img/AdidasSimbolo.png" alt="logo" class="fotoSimboloAdidas d-none d-sm-inline">
                     </a>
                 </article>
 
-                <article class="brand3">
+                <article class="col-6 col-md-6 col-lg-3 brand3 text-center">
                     <a href="#">
                         <img src="./img/logospuma.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/SimboloPuma.png" alt="logo" class="fotoSimbolo">
+                        <img src="./img/SimboloPuma.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
                     </a>
                 </article>
 
-                <article class="brand4">
+                <article class="col-6 col-md-6 col-lg-3 brand4 text-center">
                     <a href="#">
                         <img src="./img/asicslogo.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/SimboloAsics.png" alt="logo" class="fotoSimbolo">
+                        <img src="./img/SimboloAsics.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
                     </a>
                 </article>
-
-            </div>
-
-            <div id="videos-carusel">
-                <div class="video-container">
-                    <video src="vid/Zapatillas nike.mp4" autoplay loop muted width="100%"></video>
-                    <div class="video-desc">
-                        <h2>Nuevas Nike Gato 2.0</h2>
-                        <a href="#" class="button">Ver producto</a>
-                    </div>
-                </div>
             </div>
         </section>
 
-        <section id="mas-comprados">
-            <h2>Mas comprados</h2>
+        <div id="videos-carusel" class="container-fluid p-0 mt-5">
+            <div class="video-container">
+                <video src="vid/Zapatillas nike.mp4" autoplay loop muted width="100%"></video>
+                <div class="video-desc d-flex flex-column justify-content-center align-items-center">
+                    <h2>Nuevas Nike Gato 2.0</h2>
+                    <a href="#" class="button">Ver producto</a>
+                </div>
+            </div>
+        </div>
+
+        <section id="mas-comprados" class="container mt-5 mb-5">
+            <h2 class="text-center mb-5">Mas comprados</h2>
 
             <div id="carousel-wrapper">
-                <div id="products">
-                    <article class="product1">
-                        <div>
-                            <a href="#">
-                                <img src="./img/zapatillasNikeKM.png" alt="imagen-logo" class="fotoMasComprados">
-                            </a>
-                            <div class="prod-desc">
-                                <strong>Nike Mercurial Superfly 10 Academy</strong>
-                                <p>69,99 € <span>99,99 €</span></p>
+                <div id="products" class="row g-4">
+                    <article class="col-12 col-md-6 col-lg-3 product1">
+                        <div class="h-100 d-flex flex-column justify-content-between">
+                            <div>
+                                <a href="#" class="d-block text-center">
+                                    <img src="./img/zapatillasNikeKM.png" alt="imagen-logo" class="fotoMasComprados">
+                                </a>
+                                <div class="prod-desc p-3 text-center">
+                                    <strong>Nike Mercurial Superfly 10 Academy</strong>
+                                    <p>69,99 € <span>99,99 €</span></p>
+                                </div>
                             </div>
+                            <a href="#" class="button mt-auto">Añadir al carrito</a>
                         </div>
-                        <a href="#" class="button">Añadir al carrito</a>
                     </article>
 
-                    <article class="product2">
-                        <div>
-                            <a href="#">
-                                <img src="./img/ZapasNikeMasComprado.png" alt="imagen-logo" class="fotoMasComprados">
-                            </a>
-                            <div class="prod-desc">
-                                <strong> Nike Zoomx 2060</strong>
-                                <p>120,00 €</p>
+                    <article class="col-12 col-md-6 col-lg-3 product2">
+                        <div class="h-100 d-flex flex-column justify-content-between">
+                            <div>
+                                <a href="#" class="d-block text-center">
+                                    <img src="./img/ZapasNikeMasComprado.png" alt="imagen-logo"
+                                        class="fotoMasComprados">
+                                </a>
+                                <div class="prod-desc p-3 text-center">
+                                    <strong> Nike Zoomx 2060</strong>
+                                    <p>120,00 €</p>
+                                </div>
                             </div>
+                            <a href="#" class="button mt-auto">Añadir al carrito</a>
                         </div>
-                        <a href="#" class="button">Añadir al carrito</a>
                     </article>
 
-                    <article class="product3">
-                        <div>
-                            <a href="#">
-                                <img src="./img/nikeropa-removebg-preview.png" alt="imagen-logo"
-                                    class="fotoMasComprados">
-                            </a>
-                            <div class="prod-desc">
-                                <strong>Nike Impossibly Light</strong>
-                                <p>76,99 € <span>109,99 €</span></p>
+                    <article class="col-12 col-md-6 col-lg-3 product3">
+                        <div class="h-100 d-flex flex-column justify-content-between">
+                            <div>
+                                <a href="#" class="d-block text-center">
+                                    <img src="./img/nikeropa-removebg-preview.png" alt="imagen-logo"
+                                        class="fotoMasComprados">
+                                </a>
+                                <div class="prod-desc p-3 text-center">
+                                    <strong>Nike Impossibly Light</strong>
+                                    <p>76,99 € <span>109,99 €</span></p>
+                                </div>
                             </div>
+                            <a href="#" class="button mt-auto">Añadir al carrito</a>
                         </div>
-                        <a href="#" class="button">Añadir al carrito</a>
-
                     </article>
-                    <article class="product4">
-                        <div>
-                            <a href="#">
-                                <img src="./img/CalcetinesMasCmprado.png" alt="imagen-logo" class="fotoMasComprados">
-                            </a>
-                            <div class="prod-desc">
-                                <strong>Calcetines Nike</strong>
-                                <p>19,99€</p>
+                    <article class="col-12 col-md-6 col-lg-3 product4">
+                        <div class="h-100 d-flex flex-column justify-content-between">
+                            <div>
+                                <a href="#" class="d-block text-center">
+                                    <img src="./img/CalcetinesMasCmprado.png" alt="imagen-logo"
+                                        class="fotoMasComprados">
+                                </a>
+                                <div class="prod-desc p-3 text-center">
+                                    <strong>Calcetines Nike</strong>
+                                    <p>19,99€</p>
+                                </div>
                             </div>
+                            <a href="#" class="button mt-auto">Añadir al carrito</a>
                         </div>
-                        <a href="#" class="button">Añadir al carrito</a>
                     </article>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer>
-        <div>
-            <section id="recursos">
-                <h3>Recursos</h3>
-                <ul>
-                    <li><a href="#">Obtener ayuda</a></li>
-                    <li><a href="#">Estado del pedido</a></li>
-                    <li><a href="#">Envios y entregas</a></li>
-                    <li><a href="#">Devoluciones</a></li>
-                    <li><a href="#">Opciones de pago</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Evaluaciones</a></li>
-                </ul>
-            </section>
-            <section id="about-us">
-                <h3>Sobre nosotros</h3>
-                <ul>
-                    <li><a href="#">Quienes somos</a></li>
-                    <li><a href="#">Contacto de prensa</a></li>
-                </ul>
-            </section>
-            <section id="suscripcion-pedidos">
-                <h3>Mis pedidos</h3>
-                <a href="#">Inicia sesion para ver tus pedidos</a>
-                <a href="#" class="button">VER PEDIDOS</a>
+    <footer style="background-color: #1F1F1F;">
+        <div class="container py-5">
+            <div class="row text-center text-md-start">
+                <section id="recursos" class="col-12 col-md-4 mb-4">
+                    <h3>Recursos</h3>
+                    <ul>
+                        <li><a href="#">Obtener ayuda</a></li>
+                        <li><a href="#">Estado del pedido</a></li>
+                        <li><a href="#">Envios y entregas</a></li>
+                        <li><a href="#">Devoluciones</a></li>
+                        <li><a href="#">Opciones de pago</a></li>
+                        <li><a href="#">Contacto</a></li>
+                        <li><a href="#">Evaluaciones</a></li>
+                    </ul>
+                </section>
+                <section id="about-us" class="col-12 col-md-4 mb-4">
+                    <h3>Sobre nosotros</h3>
+                    <ul>
+                        <li><a href="#">Quienes somos</a></li>
+                        <li><a href="#">Contacto de prensa</a></li>
+                    </ul>
+                </section>
+                <section id="suscripcion-pedidos" class="col-12 col-md-4 mb-4">
+                    <h3>Mis pedidos</h3>
+                    <a href="#">Inicia sesion para ver tus pedidos</a>
+                    <a href="#" class="button mt-2 d-inline-block">VER PEDIDOS</a>
 
-                <h3>Suscribirse</h3>
-                <p>Suscribete para recibir notificaciones como ofertas, descuentos, novedades</p>
-                <a href="#" class="button">SUSCRIBIRSE</a>
-            </section>
+                    <h3 class="mt-4">Suscribirse</h3>
+                    <p>Suscribete para recibir notificaciones como ofertas, descuentos, novedades</p>
+                    <a href="#" class="button mt-2 d-inline-block">SUSCRIBIRSE</a>
+                </section>
+            </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="js/anims.js" defer></script>
 </body>
 
