Secciones mas comprados, brands con bootstrap

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -48,31 +48,31 @@
             </div>
         </header>
 
-        <section id="novedades" class="container mt-5">
+        <section id="novedades" class="container-fluid container-fluid px-0 px-sm-3">
             <h2 class="text-center mb-5">Novedades</h2>
-            <div id="brands" class="row g-4">
-                <article class="col-6 col-md-6 col-lg-3 brand1 text-center">
+            <div id="brands" class="row justify-content-md-around g-0 g-sm-4">
+                <article class="col-6 col-md-6 col-lg-2 text-center">
                     <a href="#">
                         <img src="./img/logoNike.jpg" alt="imagen-logo" class="fotoMasNovedades">
                         <img src="./img/simboloNike.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
                     </a>
                 </article>
 
-                <article class="col-6 col-md-6 col-lg-3 brand2 text-center">
+                <article class="col-6 col-md-6 col-lg-2 text-center">
                     <a href="#">
                         <img src="./img/logoAdidass.jpg" alt="imagen-logo" class="fotoMasNovedades">
                         <img src="./img/AdidasSimbolo.png" alt="logo" class="fotoSimboloAdidas d-none d-sm-inline">
                     </a>
                 </article>
 
-                <article class="col-6 col-md-6 col-lg-3 brand3 text-center">
+                <article class="col-6 col-md-6 col-lg-2 text-center">
                     <a href="#">
                         <img src="./img/logospuma.jpg" alt="imagen-logo" class="fotoMasNovedades">
                         <img src="./img/SimboloPuma.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
                     </a>
                 </article>
 
-                <article class="col-6 col-md-6 col-lg-3 brand4 text-center">
+                <article class="col-6 col-md-6 col-lg-2 text-center">
                     <a href="#">
                         <img src="./img/asicslogo.jpg" alt="imagen-logo" class="fotoMasNovedades">
                         <img src="./img/SimboloAsics.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
@@ -92,74 +92,74 @@
         </div>
 
         <section id="mas-comprados" class="container mt-5 mb-5">
-            <h2 class="text-center mb-5">Mas comprados</h2>
+  <h2 class="text-center mb-5">Más comprados</h2>
 
-            <div id="carousel-wrapper">
-                <div id="products" class="row g-4">
-                    <article class="col-12 col-md-6 col-lg-3 product1">
-                        <div class="h-100 d-flex flex-column justify-content-between">
-                            <div>
-                                <a href="#" class="d-block text-center">
-                                    <img src="./img/zapatillasNikeKM.png" alt="imagen-logo" class="fotoMasComprados">
-                                </a>
-                                <div class="prod-desc p-3 text-center">
-                                    <strong>Nike Mercurial Superfly 10 Academy</strong>
-                                    <p>69,99 € <span>99,99 €</span></p>
-                                </div>
-                            </div>
-                            <a href="#" class="button mt-auto">Añadir al carrito</a>
-                        </div>
-                    </article>
+  <div class="row flex-nowrap overflow-auto gx-3 products-carousel">
 
-                    <article class="col-12 col-md-6 col-lg-3 product2">
-                        <div class="h-100 d-flex flex-column justify-content-between">
-                            <div>
-                                <a href="#" class="d-block text-center">
-                                    <img src="./img/ZapasNikeMasComprado.png" alt="imagen-logo"
-                                        class="fotoMasComprados">
-                                </a>
-                                <div class="prod-desc p-3 text-center">
-                                    <strong> Nike Zoomx 2060</strong>
-                                    <p>120,00 €</p>
-                                </div>
-                            </div>
-                            <a href="#" class="button mt-auto">Añadir al carrito</a>
-                        </div>
-                    </article>
+    <!-- Producto 1 -->
+    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+      <div class="h-100 d-flex flex-column justify-content-between">
+        <a href="#" class="d-block text-center">
+          <img src="./img/zapatillasNikeKM.png" alt="Nike Mercurial" class="fotoMasComprados">
+        </a>
+        <div class="prod-desc p-2 text-center">
+          <strong>Nike Mercurial Superfly 10 Academy</strong>
+          <p>69,99 € <span>99,99 €</span></p>
+        </div>
+        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+      </div>
+    </div>
 
-                    <article class="col-12 col-md-6 col-lg-3 product3">
-                        <div class="h-100 d-flex flex-column justify-content-between">
-                            <div>
-                                <a href="#" class="d-block text-center">
-                                    <img src="./img/nikeropa-removebg-preview.png" alt="imagen-logo"
-                                        class="fotoMasComprados">
-                                </a>
-                                <div class="prod-desc p-3 text-center">
-                                    <strong>Nike Impossibly Light</strong>
-                                    <p>76,99 € <span>109,99 €</span></p>
-                                </div>
-                            </div>
-                            <a href="#" class="button mt-auto">Añadir al carrito</a>
-                        </div>
-                    </article>
-                    <article class="col-12 col-md-6 col-lg-3 product4">
-                        <div class="h-100 d-flex flex-column justify-content-between">
-                            <div>
-                                <a href="#" class="d-block text-center">
-                                    <img src="./img/CalcetinesMasCmprado.png" alt="imagen-logo"
-                                        class="fotoMasComprados">
-                                </a>
-                                <div class="prod-desc p-3 text-center">
-                                    <strong>Calcetines Nike</strong>
-                                    <p>19,99€</p>
-                                </div>
-                            </div>
-                            <a href="#" class="button mt-auto">Añadir al carrito</a>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </section>
+    <!-- Producto 2 -->
+    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+      <div class="h-100 d-flex flex-column justify-content-between">
+        <a href="#" class="d-block text-center">
+          <img src="./img/ZapasNikeMasComprado.png" alt="Nike Zoomx 2060" class="fotoMasComprados">
+        </a>
+        <div class="prod-desc p-2 text-center">
+          <strong>Nike Zoomx 2060</strong>
+          <p>120,00 €</p>
+        </div>
+        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+      </div>
+    </div>
+
+    <!-- Producto 3 -->
+    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+      <div class="h-100 d-flex flex-column justify-content-between">
+        <a href="#" class="d-block text-center">
+          <img src="./img/nikeropa-removebg-preview.png" alt="Nike Impossibly Light" class="fotoMasComprados">
+        </a>
+        <div class="prod-desc p-2 text-center">
+          <strong>Nike Impossibly Light</strong>
+          <p>76,99 € <span>109,99 €</span></p>
+        </div>
+        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+      </div>
+    </div>
+
+    <!-- Producto 4 -->
+    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+      <div class="h-100 d-flex flex-column justify-content-between">
+        <a href="#" class="d-block text-center">
+          <img src="./img/CalcetinesMasCmprado.png" alt="Calcetines Nike" class="fotoMasComprados">
+        </a>
+        <div class="prod-desc p-2 text-center">
+          <strong>Calcetines Nike</strong>
+          <p>19,99 €</p>
+        </div>
+        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
     </main>
 
     <footer style="background-color: #1F1F1F;">
