--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -27,7 +27,7 @@
     <section id="products">
 
     </section>
-    <script type="module" src="./js/app.js"></script>
+    <script type="module" src="./js/products.js"></script>
 </body>
 
 </html>
