--- a/frontend/home.html
+++ b/frontend/home.html
@@ -11,35 +11,53 @@
 </head>
 
 <body>
-    <nav id="nav-section" class="fixed-top" style="background-color: #1F1F1F;">
-        <div class="container-fluid h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-lg-1 col-md-2 col-2 text-center">
-                    <img src="./img/logo.png" alt="imagen-logo" class="logoPagina img-fluid">
-                </div>
+    <nav id="nav-section" class="navbar navbar-expand-lg fixed-top" style="background-color: #1F1F1F;">
+        <div class="container-fluid">
+            <!-- Mobile Logo and Toggler -->
+            <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
+                <img src="./img/logo.png" alt="imagen-logo" class="logoPagina img-fluid" style="height: 50px;">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+                    aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"
+                    style="border: 1px solid #D72631;">
+                    <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
+                </button>
+            </div>
 
-                <div class="col-lg-4 col-md-8 d-none d-lg-block">
-                    <ul id="main-nav" class="d-flex justify-content-around list-unstyled m-0">
-                        <li><a href="">Hombre</a></li>
-                        <li><a href="">Mujer</a></li>
-                        <li><a href="">Niños</a></li>
-                    </ul>
-                </div>
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="row w-100 align-items-center g-0">
+                    <!-- Desktop Logo -->
+                    <div class="col-lg-1 d-none d-lg-block text-center">
+                        <img src="./img/logo.png" alt="imagen-logo" class="logoPagina img-fluid">
+                    </div>
 
-                <div class="col-lg-5 col-md-6 col-6 d-block">
-                    <input type="text" placeholder="Buscar" class="w-100">
-                </div>
+                    <!-- Nav Links -->
+                    <div class="col-lg-4 col-md-12 mt-3 mt-lg-0">
+                        <ul id="main-nav"
+                            class="d-flex flex-column flex-lg-row justify-content-around list-unstyled m-0 gx-0 gap-2 gap-lg-0">
+                            <li><a href="">Hombre</a></li>
+                            <li><a href="">Mujer</a></li>
+                            <li><a href="">Niños</a></li>
+                        </ul>
+                    </div>
 
-                <div class="col-lg-2 col-md-4 col-4 d-flex justify-content-end">
-                    <ul id="icon-nav" class="d-flex list-unstyled m-0 gap-3">
-                        <li><a href="../backend/auth/login.php"><img src="img/user.png" alt=""></a></li>
-                        <li><a href="#"><img src="img/carrito.png" alt=""></a></li>
-                    </ul>
-                    <!-- Mobile Menu Button Placeholder if strictly needed, but respecting "leave it as before" implies desktop-first emphasis with responsive tweaks -->
+                    <!-- Search Bar -->
+                    <div class="col-lg-5 col-md-12 my-3 my-lg-0 px-lg-3">
+                        <input type="text" placeholder="Buscar" class="w-100">
+                    </div>
+
+                    <!-- Icons -->
+                    <div class="col-lg-2 col-md-12 d-flex justify-content-center justify-content-lg-end">
+                        <ul id="icon-nav" class="d-flex list-unstyled m-0 gap-3">
+                            <li><a href="../backend/auth/login.php"><img src="img/user.png" alt=""></a></li>
+                            <li><a href="#"><img src="img/carrito.png" alt=""></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </nav>
+
     <main>
         <header class="d-flex align-items-center justify-content-center text-center">
             <div class="container">
@@ -92,74 +110,69 @@
         </div>
 
         <section id="mas-comprados" class="container mt-5 mb-5">
-  <h2 class="text-center mb-5">Más comprados</h2>
+            <h2 class="text-center mb-5">Más comprados</h2>
 
-  <div class="row flex-nowrap overflow-auto gx-3 products-carousel">
+            <div class="row flex-nowrap overflow-auto gx-3 products-carousel">
 
-    <!-- Producto 1 -->
-    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
-      <div class="h-100 d-flex flex-column justify-content-between">
-        <a href="#" class="d-block text-center">
-          <img src="./img/zapatillasNikeKM.png" alt="Nike Mercurial" class="fotoMasComprados">
-        </a>
-        <div class="prod-desc p-2 text-center">
-          <strong>Nike Mercurial Superfly 10 Academy</strong>
-          <p>69,99 € <span>99,99 €</span></p>
-        </div>
-        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
-      </div>
-    </div>
+                <!-- Producto 1 -->
+                <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+                    <div class="h-100 d-flex flex-column justify-content-between">
+                        <a href="#" class="d-block text-center">
+                            <img src="./img/zapatillasNikeKM.png" alt="Nike Mercurial" class="fotoMasComprados">
+                        </a>
+                        <div class="prod-desc p-2 text-center">
+                            <strong>Nike Mercurial Superfly 10 Academy</strong>
+                            <p>69,99 € <span>99,99 €</span></p>
+                        </div>
+                        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+                    </div>
+                </div>
 
-    <!-- Producto 2 -->
-    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
-      <div class="h-100 d-flex flex-column justify-content-between">
-        <a href="#" class="d-block text-center">
-          <img src="./img/ZapasNikeMasComprado.png" alt="Nike Zoomx 2060" class="fotoMasComprados">
-        </a>
-        <div class="prod-desc p-2 text-center">
-          <strong>Nike Zoomx 2060</strong>
-          <p>120,00 €</p>
-        </div>
-        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
-      </div>
-    </div>
+                <!-- Producto 2 -->
+                <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+                    <div class="h-100 d-flex flex-column justify-content-between">
+                        <a href="#" class="d-block text-center">
+                            <img src="./img/ZapasNikeMasComprado.png" alt="Nike Zoomx 2060" class="fotoMasComprados">
+                        </a>
+                        <div class="prod-desc p-2 text-center">
+                            <strong>Nike Zoomx 2060</strong>
+                            <p>120,00 €</p>
+                        </div>
+                        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+                    </div>
+                </div>
 
-    <!-- Producto 3 -->
-    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
-      <div class="h-100 d-flex flex-column justify-content-between">
-        <a href="#" class="d-block text-center">
-          <img src="./img/nikeropa-removebg-preview.png" alt="Nike Impossibly Light" class="fotoMasComprados">
-        </a>
-        <div class="prod-desc p-2 text-center">
-          <strong>Nike Impossibly Light</strong>
-          <p>76,99 € <span>109,99 €</span></p>
-        </div>
-        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
-      </div>
-    </div>
+                <!-- Producto 3 -->
+                <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+                    <div class="h-100 d-flex flex-column justify-content-between">
+                        <a href="#" class="d-block text-center">
+                            <img src="./img/nikeropa-removebg-preview.png" alt="Nike Impossibly Light"
+                                class="fotoMasComprados">
+                        </a>
+                        <div class="prod-desc p-2 text-center">
+                            <strong>Nike Impossibly Light</strong>
+                            <p>76,99 € <span>109,99 €</span></p>
+                        </div>
+                        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+                    </div>
+                </div>
 
-    <!-- Producto 4 -->
-    <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
-      <div class="h-100 d-flex flex-column justify-content-between">
-        <a href="#" class="d-block text-center">
-          <img src="./img/CalcetinesMasCmprado.png" alt="Calcetines Nike" class="fotoMasComprados">
-        </a>
-        <div class="prod-desc p-2 text-center">
-          <strong>Calcetines Nike</strong>
-          <p>19,99 €</p>
-        </div>
-        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
-      </div>
-    </div>
+                <!-- Producto 4 -->
+                <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
+                    <div class="h-100 d-flex flex-column justify-content-between">
+                        <a href="#" class="d-block text-center">
+                            <img src="./img/CalcetinesMasCmprado.png" alt="Calcetines Nike" class="fotoMasComprados">
+                        </a>
+                        <div class="prod-desc p-2 text-center">
+                            <strong>Calcetines Nike</strong>
+                            <p>19,99 €</p>
+                        </div>
+                        <a href="#" class="button mt-auto w-100 text-center">Añadir al carrito</a>
+                    </div>
+                </div>
 
-  </div>
-</section>
-
-
-
-
-
-
+            </div>
+        </section>
     </main>
 
     <footer style="background-color: #1F1F1F;">
