--- a/frontend/producto.html
+++ b/frontend/producto.html
@@ -33,18 +33,19 @@
                         <li><a href="../backend/auth/login.php"><img src="img/user.png" alt=""></a></li>
                         <li><a href="#"><img src="img/carrito.png" alt=""></a></li>
                     </ul>
-                    <!-- Mobile Menu Button Placeholder if strictly needed, but respecting "leave it as before" implies desktop-first emphasis with responsive tweaks -->
+                    
                 </div>
             </div>
         </div>
     </nav>
     <main>
         <section id="product">
-            <div class="container-fluid g-5">
-                <div class="col-6 col-md-6 col-lg-6" id="product-img-container">
+            <div class="d-flex justify-items-center g-5">
+                <div class="col-6 col-md-6 col-lg-6 text-center" id="product-img-container">
                     <!--IMG PRODUCTO-->
+                    <img src="./img/AdidasMasComprado.png" alt="imagen" id="imagen-producto">
                 </div>
-                <div class="col-6 col-md-6 col-lg-6" id="product-main-data-container">
+                <div class="col-6 col-md-6 col-lg-6" id="product-data">
                     <!--NOMBRE, PRECIO, AÑADIR AL CARRITO-->
                 </div>
             </div>
@@ -53,7 +54,29 @@
 
         </section>
 
+        <section id="add-comment">
+            <form action="" method="POST">
+                <label for="valoracion">
+                    Estrellas
+                    <select name="valoracion" id="valoracion">
+                        <option value="1">1 estrella</option>
+                        <option value="2">2 estrellas</option>
+                        <option value="3">3 estrellas</option>
+                        <option value="4">4 estrellas</option>
+                        <option value="5">5 estrellas</option>
+                    </select>
+                </label>
+
+                <label for="comments">
+                    <textarea name="comments" id="comments" cols="20" ></textarea>
+                </label>
+            </form>
+        </section>
+
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script type="module"  src="./js/product.js"></script>
 </body>
 </html>
