--- a/frontend/carrito.html
+++ b/frontend/carrito.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Catálogo de productos - J&A Sports. Encuentra la mejor ropa y calzado deportivo.">
+    <meta name="description" content="Carrito de compras - J&A Sports. Revisa y finaliza tu pedido.">
+    <title>Carrito - J&A Sports</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Productos - J&A Sports</title>
-    <link rel="stylesheet" href="./css/productos.css">
 </head>
 
 <body>
@@ -67,10 +66,13 @@
             </div>
         </div>
     </nav>
-    <section id="products">
-        <h2>Productos</h2>
-    </section>
-    <script type="module" src="./js/products.js"></script>
+    <main class="container mt-5 pt-5">
+        <h1>Carrito de compras</h1>
+        <p>Tu carrito está vacío.</p>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
