--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="J&A Sports - Tu tienda online de confianza para ropa y calzado deportivo de las mejores marcas.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +17,10 @@
         <div class="container-fluid">
 
             <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
-                <img src="./img/logo.png" alt="imagen-logo" class="logoPagina img-fluid" style="height: 50px;">
+                <a href="./home.html">
+                    <img src="./img/logo.png" alt="Logotipo de J&A Sports" class="logoPagina img-fluid"
+                        style="height: 50px;">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
                     aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"
                     style="border: 1px solid #D72631;">
@@ -28,29 +33,34 @@
                 <div class="row w-100 align-items-center g-0">
 
                     <div class="col-lg-1 d-none d-lg-block text-center">
-                        <img src="./img/logo.png" alt="imagen-logo" class="logoPagina img-fluid">
+                        <a href="./home.html">
+                            <img src="./img/logo.png" alt="Logotipo de J&A Sports" class="logoPagina img-fluid">
+                        </a>
                     </div>
 
 
                     <div class="col-lg-4 col-md-12 mt-3 mt-lg-0">
                         <ul id="main-nav"
                             class="d-flex flex-column flex-lg-row justify-content-around list-unstyled m-0 gx-0 gap-2 gap-lg-0">
-                            <li><a href="">Hombre</a></li>
-                            <li><a href="">Mujer</a></li>
-                            <li><a href="">Niños</a></li>
+                            <li><a href="#">Hombre</a></li>
+                            <li><a href="#">Mujer</a></li>
+                            <li><a href="#">Niños</a></li>
+                            <li><a href="./productos.html">Productos</a></li>
                         </ul>
                     </div>
 
                     <!-- Search Bar -->
                     <div class="col-lg-5 col-md-12 my-3 my-lg-0 px-lg-3">
-                        <input type="text" placeholder="Buscar" class="w-100">
+                        <input type="text" placeholder="Buscar" aria-label="Buscar productos" class="w-100">
                     </div>
 
                     <!-- Icons -->
                     <div class="col-lg-2 col-md-12 d-flex justify-content-center justify-content-lg-end">
                         <ul id="icon-nav" class="d-flex list-unstyled m-0 gap-3">
-                            <li><a href="../backend/auth/login.php"><img src="img/user.png" alt=""></a></li>
-                            <li><a href="#"><img src="img/carrito.png" alt=""></a></li>
+                            <li><a href="../backend/auth/login.php" aria-label="Iniciar sesión"><img src="img/user.png"
+                                        alt="Icono de usuario"></a></li>
+                            <li><a href="./carrito.html" aria-label="Ver carrito"><img src="img/carrito.png"
+                                        alt="Icono del carrito"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -70,30 +80,34 @@
             <h2 class="text-center mb-5">Novedades</h2>
             <div id="brands" class="row justify-content-md-around g-0 g-sm-4">
                 <article class="col-6 col-md-6 col-lg-2 text-center">
-                    <a href="#">
-                        <img src="./img/logoNike.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/simboloNike.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
+                    <a href="#" aria-label="Ver novedades de Nike">
+                        <img src="./img/logoNike.jpg" alt="Logotipo de Nike" class="fotoMasNovedades">
+                        <img src="./img/simboloNike.png" alt="" class="fotoSimbolo d-none d-sm-inline"
+                            aria-hidden="true">
                     </a>
                 </article>
 
                 <article class="col-6 col-md-6 col-lg-2 text-center">
-                    <a href="#">
-                        <img src="./img/logoAdidass.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/AdidasSimbolo.png" alt="logo" class="fotoSimboloAdidas d-none d-sm-inline">
+                    <a href="#" aria-label="Ver novedades de Adidas">
+                        <img src="./img/logoAdidass.jpg" alt="Logotipo de Adidas" class="fotoMasNovedades">
+                        <img src="./img/AdidasSimbolo.png" alt="" class="fotoSimboloAdidas d-none d-sm-inline"
+                            aria-hidden="true">
                     </a>
                 </article>
 
                 <article class="col-6 col-md-6 col-lg-2 text-center">
-                    <a href="#">
-                        <img src="./img/logospuma.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/SimboloPuma.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
+                    <a href="#" aria-label="Ver novedades de Puma">
+                        <img src="./img/logospuma.jpg" alt="Logotipo de Puma" class="fotoMasNovedades">
+                        <img src="./img/SimboloPuma.png" alt="" class="fotoSimbolo d-none d-sm-inline"
+                            aria-hidden="true">
                     </a>
                 </article>
 
                 <article class="col-6 col-md-6 col-lg-2 text-center">
-                    <a href="#">
-                        <img src="./img/asicslogo.jpg" alt="imagen-logo" class="fotoMasNovedades">
-                        <img src="./img/SimboloAsics.png" alt="logo" class="fotoSimbolo d-none d-sm-inline">
+                    <a href="#" aria-label="Ver novedades de Asics">
+                        <img src="./img/asicslogo.jpg" alt="Logotipo de Asics" class="fotoMasNovedades">
+                        <img src="./img/SimboloAsics.png" alt="" class="fotoSimbolo d-none d-sm-inline"
+                            aria-hidden="true">
                     </a>
                 </article>
             </div>
@@ -101,7 +115,8 @@
 
         <div id="videos-carusel" class="container-fluid p-0 mt-5">
             <div class="video-container">
-                <video src="vid/Zapatillas nike.mp4" autoplay loop muted width="100%"></video>
+                <video src="vid/Zapatillas nike.mp4" autoplay loop muted width="100%"
+                    aria-label="Video promocional de Zapatillas Nike"></video>
                 <div class="video-desc d-flex flex-column justify-content-center align-items-center">
                     <h2>Nuevas Nike Gato 2.0</h2>
                     <a href="#" class="button">Ver producto</a>
@@ -117,8 +132,10 @@
                 <!-- Producto 1 -->
                 <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
                     <div class="h-100 d-flex flex-column justify-content-between">
-                        <a href="#" class="d-block text-center">
-                            <img src="./img/zapatillasNikeKM.png" alt="Nike Mercurial" class="fotoMasComprados">
+                        <a href="#" class="d-block text-center"
+                            aria-label="Ver detalles de Nike Mercurial Superfly 10 Academy">
+                            <img src="./img/zapatillasNikeKM.png" alt="Zapatillas Nike Mercurial Superfly 10 Academy"
+                                class="fotoMasComprados">
                         </a>
                         <div class="prod-desc p-2 text-center">
                             <strong>Nike Mercurial Superfly 10 Academy</strong>
@@ -131,8 +148,9 @@
                 <!-- Producto 2 -->
                 <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
                     <div class="h-100 d-flex flex-column justify-content-between">
-                        <a href="#" class="d-block text-center">
-                            <img src="./img/ZapasNikeMasComprado.png" alt="Nike Zoomx 2060" class="fotoMasComprados">
+                        <a href="#" class="d-block text-center" aria-label="Ver detalles de Nike Zoomx 2060">
+                            <img src="./img/ZapasNikeMasComprado.png" alt="Zapatillas Nike Zoomx 2060"
+                                class="fotoMasComprados">
                         </a>
                         <div class="prod-desc p-2 text-center">
                             <strong>Nike Zoomx 2060</strong>
@@ -145,8 +163,8 @@
                 <!-- Producto 3 -->
                 <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
                     <div class="h-100 d-flex flex-column justify-content-between">
-                        <a href="#" class="d-block text-center">
-                            <img src="./img/nikeropa-removebg-preview.png" alt="Nike Impossibly Light"
+                        <a href="#" class="d-block text-center" aria-label="Ver detalles de Nike Impossibly Light">
+                            <img src="./img/nikeropa-removebg-preview.png" alt="Chaqueta Nike Impossibly Light"
                                 class="fotoMasComprados">
                         </a>
                         <div class="prod-desc p-2 text-center">
@@ -160,8 +178,9 @@
                 <!-- Producto 4 -->
                 <div class="col-12 col-sm-6 col-lg-3 flex-shrink-0">
                     <div class="h-100 d-flex flex-column justify-content-between">
-                        <a href="#" class="d-block text-center">
-                            <img src="./img/CalcetinesMasCmprado.png" alt="Calcetines Nike" class="fotoMasComprados">
+                        <a href="#" class="d-block text-center" aria-label="Ver detalles de Calcetines Nike">
+                            <img src="./img/CalcetinesMasCmprado.png" alt="Par de calcetines Nike"
+                                class="fotoMasComprados">
                         </a>
                         <div class="prod-desc p-2 text-center">
                             <strong>Calcetines Nike</strong>
@@ -183,7 +202,7 @@
                     <ul>
                         <li><a href="#">Obtener ayuda</a></li>
                         <li><a href="#">Estado del pedido</a></li>
-                        <li><a href="#">Envios y entregas</a></li>
+                        <li><a href="#">Envíos y entregas</a></li>
                         <li><a href="#">Devoluciones</a></li>
                         <li><a href="#">Opciones de pago</a></li>
                         <li><a href="#">Contacto</a></li>
@@ -193,17 +212,17 @@
                 <section id="about-us" class="col-12 col-md-4 mb-4">
                     <h3>Sobre nosotros</h3>
                     <ul>
-                        <li><a href="#">Quienes somos</a></li>
+                        <li><a href="#">Quiénes somos</a></li>
                         <li><a href="#">Contacto de prensa</a></li>
                     </ul>
                 </section>
                 <section id="suscripcion-pedidos" class="col-12 col-md-4 mb-4">
                     <h3>Mis pedidos</h3>
-                    <a href="#">Inicia sesion para ver tus pedidos</a>
+                    <a href="#">Inicia sesión para ver tus pedidos</a>
                     <a href="#" class="button mt-2 d-inline-block">VER PEDIDOS</a>
 
                     <h3 class="mt-4">Suscribirse</h3>
-                    <p>Suscribete para recibir notificaciones como ofertas, descuentos, novedades</p>
+                    <p>Suscríbete para recibir notificaciones como ofertas, descuentos, novedades</p>
                     <a href="#" class="button mt-2 d-inline-block">SUSCRIBIRSE</a>
                 </section>
             </div>
