--- a/frontend/producto.html
+++ b/frontend/producto.html
@@ -1,39 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta name="description"
+        content="Detalles del producto - J&A Sports. Consulta precios, valoraciones y añade el producto a tu carrito.">
+    <title>Producto - J&A Sports</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/product.css">
 </head>
+
 <body>
-    <nav id="nav-section" class="fixed-top" style="background-color: #1F1F1F;">
-        <div class="container-fluid h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-lg-1 col-md-2 col-2 text-center">
-                    <img src="./img/logo.png" alt="imagen-logo" class="logoPagina img-fluid">
-                </div>
+    <nav id="nav-section" class="navbar navbar-expand-lg fixed-top" style="background-color: #1F1F1F;">
+        <div class="container-fluid">
 
-                <div class="col-lg-4 col-md-8 d-none d-lg-block">
-                    <ul id="main-nav" class="d-flex justify-content-around list-unstyled m-0">
-                        <li><a href="">Hombre</a></li>
-                        <li><a href="">Mujer</a></li>
-                        <li><a href="">Niños</a></li>
-                    </ul>
-                </div>
+            <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
+                <a href="./home.html">
+                    <img src="./img/logo.png" alt="Logotipo de J&A Sports" class="logoPagina img-fluid"
+                        style="height: 50px;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+                    aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"
+                    style="border: 1px solid #D72631;">
+                    <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
+                </button>
+            </div>
 
-                <div class="col-lg-5 col-md-6 col-6 d-block">
-                    <input type="text" placeholder="Buscar" class="w-100">
-                </div>
 
-                <div class="col-lg-2 col-md-4 col-4 d-flex justify-content-end">
-                    <ul id="icon-nav" class="d-flex list-unstyled m-0 gap-3">
-                        <li><a href="../backend/auth/login.php"><img src="img/user.png" alt=""></a></li>
-                        <li><a href="#"><img src="img/carrito.png" alt=""></a></li>
-                    </ul>
-                    
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="row w-100 align-items-center g-0">
+
+                    <div class="col-lg-1 d-none d-lg-block text-center">
+                        <a href="./home.html">
+                            <img src="./img/logo.png" alt="Logotipo de J&A Sports" class="logoPagina img-fluid">
+                        </a>
+                    </div>
+
+
+                    <div class="col-lg-4 col-md-12 mt-3 mt-lg-0">
+                        <ul id="main-nav"
+                            class="d-flex flex-column flex-lg-row justify-content-around list-unstyled m-0 gx-0 gap-2 gap-lg-0">
+                            <li><a href="#">Hombre</a></li>
+                            <li><a href="#">Mujer</a></li>
+                            <li><a href="#">Niños</a></li>
+                            <li><a href="./productos.html">Productos</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Search Bar -->
+                    <div class="col-lg-5 col-md-12 my-3 my-lg-0 px-lg-3">
+                        <input type="text" placeholder="Buscar" aria-label="Buscar productos" class="w-100">
+                    </div>
+
+                    <!-- Icons -->
+                    <div class="col-lg-2 col-md-12 d-flex justify-content-center justify-content-lg-end">
+                        <ul id="icon-nav" class="d-flex list-unstyled m-0 gap-3">
+                            <li><a href="../backend/auth/login.php" aria-label="Iniciar sesión"><img src="img/user.png"
+                                        alt="Icono de usuario"></a></li>
+                            <li><a href="./carrito.html" aria-label="Ver carrito"><img src="img/carrito.png"
+                                        alt="Icono del carrito"></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -44,7 +74,7 @@
                 <div class="d-flex justify-items-center g-5">
                     <div class="col-6 col-md-6 col-lg-6 text-center" id="product-img-container">
                         <!--IMG PRODUCTO-->
-                        <img src="./img/AdidasMasComprado.png" alt="imagen" id="imagen-producto">
+                        <img src="./img/AdidasMasComprado.png" alt="Imagen del producto" id="imagen-producto">
                     </div>
                     <div class="col-6 col-md-6 col-lg-6" id="product-data">
                         <!--NOMBRE, PRECIO, AÑADIR AL CARRITO-->
@@ -56,35 +86,36 @@
             <section id="comments" class="row my-3">
             </section>
 
-            <h1 id="comment-header-section">Añade una opinion</h1>
+            <h2 id="comment-header-section">Añade una opinión</h2>
             <section id="add-comment" class="row my-3">
                 <form action="" method="post" id="add-comment-form" class="d-flex flex-column">
                     <input type="hidden" id="id-comment" readonly hidden>
                     <label for="valoracion">
                         Estrellas
-                        <select name="valoracion" id="valoracion">
-                            <option value="1">1 estrella</option>
-                            <option value="2">2 estrellas</option>
-                            <option value="3">3 estrellas</option>
-                            <option value="4">4 estrellas</option>
-                            <option value="5">5 estrellas</option>
-                        </select>
                     </label>
+                    <select name="valoracion" id="valoracion">
+                        <option value="1">1 estrella</option>
+                        <option value="2">2 estrellas</option>
+                        <option value="3">3 estrellas</option>
+                        <option value="4">4 estrellas</option>
+                        <option value="5">5 estrellas</option>
+                    </select>
 
-                    <label for="comment">
-                        <textarea name="comment" id="comment" cols="20"></textarea>
-                    </label>
-                    <input type="submit" value="enviar">
-                    <input type="reset" value="reset">
+                    <label for="comment">Comentario</label>
+                    <textarea name="comment" id="comment" cols="20"></textarea>
+
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Resetear">
                 </form>
             </section>
 
         </div>
-        
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script type="module"  src="./js/product.js"></script>
+    <script type="module" src="./js/product.js"></script>
 </body>
+
 </html>
